fixed hot corner icon not showing in ElementaryOS

--- a/ElementaryOS/cinnamon/overview.css
+++ b/ElementaryOS/cinnamon/overview.css
@@ -102,3 +102,15 @@
 	font-size: 6pt;
 	font-style: italic;
 }
+
+/* ===================================================================
+ * Overview corner
+ * ===================================================================*/
+#overview-corner {
+	background-image: url("overview.png");
+}
+
+#overview-corner:hover {    
+    background-image:  url("overview-hover.png");
+}
+
